crates/mir/filetests/tests/invalid_programs/invalid_return_value.mir
// @harness parser_roundtrip
// @harness typecheck_validation_fails
(mir
    (func foo
        (return_type int)
        (entry block0)
        (block block0
            (constant x (1.5))
            (return (x)))))
